Create static version of Leaderboard

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -1,6 +1,8 @@
 :root {
   --orange: #f89028;
+  --light-orange: #ffab56;
   --dark-orange: #e45c01;
   --gray: #363636;
   --dark-gray: #222;
+  --light-gray: #707070;
 }
