--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -2,7 +2,12 @@
   --orange: #f89028;
   --light-orange: #ffab56;
   --dark-orange: #e45c01;
-  --gray: #363636;
-  --dark-gray: #222;
-  --light-gray: #707070;
+  --black: #111827;
+  --gray: #374151;
+  --dark-gray: #202225;
+  --light-gray: #6b7280;
 }
+
+/* --gray: #2f3136;
+--dark-gray: #202225;
+--light-gray: #36393f; */
