--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -30,7 +30,7 @@ ul, ol {
 .drop-down {
   position: absolute;
   padding: 0.5em;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 
 .drop-down-container {
@@ -42,7 +42,8 @@ ul, ol {
   padding: 0;
 }
 
-.drop-down-container--on-hover:hover .drop-down {
+.drop-down-container--on-hover:hover .drop-down,
+.drop-down-container--on-focus-within:focus-within .drop-down {
   position: absolute;
   visibility: visible;
   width: 100%;
