--- a/src/layout/components/Header.css
+++ b/src/layout/components/Header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  background-color: var(--dark-gray);
+  background-color: var(--black);
   font-family: Arial, Helvetica, sans-serif;
 } 
 
