--- a/src/pages/Leaderboard/Leaderboard.css
+++ b/src/pages/Leaderboard/Leaderboard.css
@@ -5,9 +5,10 @@
   width: 800px;
   max-width: 50%; 
   padding: 20px 50px 50px;
-  margin: auto;
+  margin: 50px auto;
   background-color: var(--light-gray);
   font-size: 24px;
+  border-radius: 20px;
 }
 
 .leaderboard-heading {
