--- a/src/pages/Leaderboard/components/Board.css
+++ b/src/pages/Leaderboard/components/Board.css
@@ -3,11 +3,15 @@
   list-style: decimal;
 }
 
-.leaderboard li+li {
+.board li {
+  padding: 0.25em 0;
+}
+
+.board li+li {
   border-top: 1px solid var(--orange);
   border-width: 2px;
 }
 
-.leaderboard li::marker {
+.board > li::marker {
   color: #fff;
 }
