Highlight results of current user

--- a/src/pages/Leaderboard/components/BoardRow.css
+++ b/src/pages/Leaderboard/components/BoardRow.css
@@ -3,3 +3,8 @@
   justify-content: space-between;
   width: 100%;
 }
+
+.current-user-result {
+  font-weight: bolder;
+  color: var(--light-orange);
+}
