Use CSS modules
Small .css files were included in each component as if they were
modules, But actually they were not since they missed .module.css
extension and style were used as strings, not as properties of the
imported object.

Also separate logic for dropdowns of each module (in UserContainer,
Leaderboard, Game) since it's easier to follow the code

--- a/src/layout/components/Header.module.css
+++ b/src/layout/components/Header.module.css
@@ -6,7 +6,7 @@
   font-family: Arial, Helvetica, sans-serif;
 } 
 
-.header-links {
+.links {
   flex: 1;
   display: flex;
   justify-content: right;
