--- a/src/components/ModalWindow.module.css
+++ b/src/components/ModalWindow.module.css
@@ -1,4 +1,7 @@
 .modal-window {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -9,9 +12,6 @@
 
 .content {
   position: sticky;
-  left: 0;
-  right: 0;
-  margin: auto;
-  top: 50vh;
-  text-align: center;
+  top: 50%; 
+  transform: translateY(-50%);
 }
